# CMS-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: generate_api_visualization.yml
.github/workflows/: generate_api_visualization.yml
api/: admin.py  apps.py  authentication.py  models.py  passwordless_auth.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20191005_1752.py  0003_participant.py  0004_delegate.py  0005_auto_20191005_1857.py  0006_auto_20191005_1915.py  0007_memberorganization.py  0008_delegate_represents.py  0009_auto_20191005_2020.py  0010_forum.py  0011_auto_20191006_1027.py  0012_auto_20191006_1033.py  0013_auto_20191006_1048.py  0014_auto_20191006_1057.py  0015_issue_lunch.py  0016_auto_20191006_1116.py  0017_auto_20191006_1652.py  0018_auto_20191006_1700.py  0019_auto_20191018_2223.py  0020_participant_picture.py  0021_auto_20191019_1616.py  0022_auto_20191020_1317.py  0023_auto_20191103_2151.py  0024_auto_20191103_2159.py  0025_auto_20220610_1535.py  0026_school_city.py  0027_remove_school_city.py  0028_school_city.py  (+32 more)
cms/: settings.py  urls.py
pdfs/: badges.py  certificates.py  placards.py  roll_call_lists.py  signs.py  urls.py  utils.py  views.py
stats/: age.py  diet.py  first_time_delegates.py  gender.py  housing.py  origin.py  stats.py  urls.py
test_data/: forums.json  generate_test_data.py  locations.json  member_organizations.json  plenaries.json
testdata/: generate_testdata.py  testdata.py
(+38 files in other folders)
