[project]
name = "cms-backend"
version = "0.1.0"
description = "The backend of a Conference Management System for Model UN conferences"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "asgiref==3.8.1",
    "cryptography==46.0.7",
    "django==4.2.30",
    "django-cors-headers==4.4.0",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-multiselectfield==0.1.13",
    "django-phonenumber-field==7.3.0",
    "djangorestframework==3.15.2",
    "drf-base64==2.0",
    "drf-spectacular==0.28.0",
    "drfpasswordless==1.5.9",
    "faker==13.12.1",
    "gunicorn==23.0.0",
    "phonenumbers==8.10.20",
    "pre-commit==3.5.0",
    "pyjwt==2.12.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.2",
    "reportlab==4.5.0",
    "requests~=2.29.0",
    "six==1.12.0",
    "sqlparse==0.5.4",
    "typing-extensions==4.11.0",
]
